# ai-facial-recognition-breaker

./: README.md  pyproject.toml
docs/: rapport.typ  references.yml
docs/affiche/: HowTo  affiche.typ  vars.typ
docs/affiche/template/: affiche_setting.typ
docs/annexes/: a-services-generation-video.typ  b-sites-enregistrement.typ  c-pilote-camera-virtuelle.typ
docs/chapitres/: 00-bibliographie.typ  00-cahier-des-charges.typ  00-glossaire.typ  00-table-des-figures.typ  01-introduction.typ  01_introduction.typ  a-services-de-generation.typ  b-sites-de-verification.typ  bibliographie.typ  c-tests-de-faisabilite-des-attaques.typ  cahier-des-charges.typ  d-camera-virtuelle.typ  d-interface-ligne-de-commande.typ  glossaire.typ  table-des-figures.typ
docs/diagrammes/: architecture.drawio  kieai.drawio  libs-compare.drawio  patterns-verification.drawio  pyvirtualcam.drawio  service-api.drawio  user-stories.drawio
docs/guides/installation/: installation.typ
docs/rapport/: rapport.typ  references.yml
docs/rapport/chapitres/: 00-annexes.typ  00-glossaire.typ  (+22 more)
docs/rapports-de-recherche/: cameras-virtuelles.typ  generation-ia.typ  sites-de-verification.typ  user-stories.typ
docs/rapports-detailles/: cameras-virtuelles.typ  generation-ia.typ  sites-de-verification.typ  tests-effectues.typ  user-stories.typ  utilisation-cli.typ
src/: .env.example  .gitignore  api.py  main.py  requirements.txt
src/aifrb/: __init__.py  api.py  main.py
src/commands/: broadcast.py  generate.py  generate_image.py  generate_video.py  remaining_credits.py
src/utils/: download_file.py
(+35 files in other folders)
